# thws_ros_unity_connection

./: .gitignore  .gitignore.save  CMakeLists.txt  README.md  package.xml
include/oculus/UR5e_Test/Assets/: Ros Connection Test.unity  msgbrowser_settings.asset  unity_robotics_demo_msgs
include/oculus/UR5e_Test/Assets/Resources/: ROSConnectionPrefab.prefab
include/oculus/UR5e_Test/Assets/Scenes/: SampleScene.unity
include/oculus/UR5e_Test/Assets/Scripts/: CustomRosPublisher.cs  RosJointController.cs  RosTrajectorySubscriber.cs  customRobotController.cs
include/oculus/UR5e_Test/Assets/urdf/: ur5e.urdf  ur5e.urdf_ur5e_robot.urdf_11:46:19.8660900.txt  ur5e_robot.urdf
include/oculus/UR5e_Test/Assets/urdf/meshes/: base.prefab  forearm.prefab  shoulder.prefab  upperarm.prefab  wrist1.prefab  wrist2.prefab  wrist3.prefab
include/oculus/UR5e_Test/Assets/urdf/meshes/ur5e/collision/: base.prefab  forearm.prefab  shoulder.prefab  upperarm.prefab  wrist1.prefab  wrist2.prefab  wrist3.prefab
include/oculus/UR5e_Test/Logs/: ApiUpdaterCheck.txt
include/oculus/UR5e_Test/ProjectSettings/: ProjectSettings.asset
include/oculus/csv/: PathJoints_1.csv  Path_1.csv  Path_1_corrected.csv
include/weldingrobot/: moveit_error_handler.h  weldingPath.h
launch/: ur10e_vr.gazebo.launch  ur5e_bringup_custom.launch  ur5e_lab.gazebo.launch  welding.gazebo.launch
launch/inc/: ur_control.launch.xml
launch/inc/worlds/: welding.world
src/: csvPoints.py  moveit_error_handler.cpp  posePlan.cpp  posePlan_moveIt.cpp  pose_send.cpp  unity_listener.cpp  unity_sphere_follow.cpp  weldingPath.cpp  weldingPath.h
